inserting banners hard coded

--- a/partials/productoversee_partials/po_sidebar.hbs
+++ b/partials/productoversee_partials/po_sidebar.hbs
@@ -34,38 +34,37 @@
         </ul>
       </nav>
 
-      {{#if @custom.sidebar_banner}} 
-      <div class="po-sidebar-banner">
-
-      <!-- /7969368/po-banner-sidebar -->
-      <div id='div-gpt-ad-1651103905668-0' style='min-width: 300px; min-height: 250px;'>
-        <script>
-          googletag.cmd.push(function() { googletag.display('div-gpt-ad-1651103905668-0'); });
-        </script>
-      </div>
-
-<!--         <a href="https://www.ituring.com.br/analise-de-dados-para-negocios/?utm_source=productoversee&utm_medium=comunidade&utm_campaign=adpn?utm_source=ProductOversee&utm_medium=sidebarLogo_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-banner po-banner-first"><img src="{{asset "/images/sponsor/ituring-banner.png"}}"></a>
-        
-        <a href="https://www.somostera.com/?utm_source=productoversee&utm_medium=portal&utm_campaign=productoversee?utm_source=ProductOversee&utm_medium=sidebarLogo_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-banner po-banner-second"><img src="{{asset "/images/sponsor/tera-banner.jpg"}}"></a> -->
-
-      </div>
-      {{/if}}
+      {{> productoversee_partials/po_sidebar_banner}}
 
 
     </div>
 
   {{/is}}</aside>
 
-{{#if @custom.switch_banners_by_hour}} 
+{{#if @custom.sidebar_banner}} 
 <script type="text/javascript">
-  function isEven() {
-    const date = new Date();
-    const hour = date.getHours()
-    
-    if (hour % 2 == 0) {
-      document.body.classList.add("po-show-banner-second")
+  
+    function showBanner() {
+      var randNumber = Math.random();
+
+      if (randNumber <= 0.25) {
+        document.body.classList.add("po-sidebar-banner-1")
+      }
+
+      if (randNumber >= 0.75) {
+        document.body.classList.add("po-sidebar-banner-2")
+      }
+
+      if (randNumber > 0.25 && randNumber <= 0.50) {
+        document.body.classList.add("po-sidebar-banner-3")
+      }
+
+      if (randNumber > 0.50 && randNumber < 0.75) {
+        document.body.classList.add("po-sidebar-banner-4")
+      }
+
     }
-  }
-  isEven();
+
+    showBanner();
 </script>
 {{/if}}
