--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -190,7 +190,6 @@ blockquote {
 }
 
 .po-sponsor-post li {
-	/*border-top:  1px solid rgba(0, 0, 0, .1);*/
 	margin:  50px 0;
 	padding:  30px 0;
 }
@@ -205,11 +204,20 @@ blockquote {
 	margin-right: 15px;
 }
 
- 
+
+.po-sidebar-banner ul {list-style: none;}
+.po-sidebar-banner ul li {display: none;}
+
+body.po-sidebar-banner-1 .po-sidebar-banner ul li:nth-child(1) {display: block;}
+body.po-sidebar-banner-2 .po-sidebar-banner ul li:nth-child(2) {display: block;}
+body.po-sidebar-banner-3 .po-sidebar-banner ul li:nth-child(3) {display: block;}
+body.po-sidebar-banner-4 .po-sidebar-banner ul li:nth-child(4) {display: block;}
+
+/* 
 .po-banner-second,
 .po-show-banner-second .po-banner-first {display: none;}
 .po-show-banner-second .po-banner-second {display: block;}
 
 
-
+*/
 
