--- a/partials/productoversee_partials/po_home_post_sponsor.hbs
+++ b/partials/productoversee_partials/po_home_post_sponsor.hbs
@@ -1,3 +1,3 @@
-<a href="https://www.ituring.com.br/analise-de-dados-para-negocios/?utm_source=productoversee&utm_medium=comunidade&utm_campaign=adpn?utm_source=ProductOversee&utm_medium=article_ProductOversee&utm_campaign=parceria_ProductOversee" class="po-home-sponsor">
-  <img src="{{asset "images/sponsor/ituring-logo.png"}}">
+<a href="https://somostera.com/cursos/digital-product-leadership?utm_campaign=product-oversee_dpl&utm_source=product-oversee&utm_medium=banner&utm_content=product-oversee_dpl" class="po-home-sponsor">
+  <img src="{{asset "images/sponsor/tera-logo.png"}}">
 </a>
