--- a/home.hbs
+++ b/home.hbs
@@ -54,7 +54,7 @@
       <h2 class="po-section-title">Selecionados</h2>
       <ul>
 
-        {{#get "posts" include="tags,author" filter="featured:true" limit="4" as |featured|}}
+        {{#get "posts" include="tags,authors" filter="featured:true" limit="4" as |featured|}}
         {{#foreach featured}}
         <li>
           <a href="{{url}}" alt="{{meta_description}}">
