--- a/partials/productoversee_partials/po_sidebar.hbs
+++ b/partials/productoversee_partials/po_sidebar.hbs
@@ -33,9 +33,9 @@
       {{/get}}
         </ul>
       </nav>
-
-      {{> productoversee_partials/po_sidebar_banner}}
-
+        {{#unless @member}}
+          {{> productoversee_partials/po_sidebar_banner}}
+        {{/unless}}
 
     </div>
 
