adicionando google tag manager

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -50,6 +50,9 @@ a:hover h1 {
   color: var(--colorRed);
 }
 
+.gh-subscribe-input {max-width: 30% !important;}
+
+
 .home-template #st-2{display: none;}
 .st-btn img {display: inline-block !important; vertical-align: middle;}
 
