--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,12 @@
 </head>
 
 <body class="{{body_class}} {{#if @custom.social_icons}} with-social-link{{/if}} po-ghost-template is-head-b--a_n{{#match @custom.title_font "=" "serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "serif"}} has-serif-body{{/match}}">
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRH8LC5"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  
   <div class="gh-site">
     
     {{> "productoversee_partials/po_header" }}
@@ -38,7 +44,6 @@
           <a class="gh-subscribe-input" href="#/portal/signup" data-portal="signup">
             <div class="gh-subscribe-input-text">
               {{> icons/email}}
-              faleconosco@productoversee.com
             </div>
             <div class="gh-subscribe-input-btn">Inscreva-se</div>
           </a>
