--- a/default.hbs
+++ b/default.hbs
@@ -7,7 +7,7 @@
   <title>{{meta_title}} - {{meta_description}}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@100;400;700;800;900&DM+Mono:wght@300;400;500&Work+Sans:wght@300;400;600&family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@100;400;700&Open+Sans:wght@300;400;700&family=Azeret+Mono:wght@100;300;400;600,700,900&family=Noto+Serif+Display:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="{{asset "css/screen.css"}}">
   <link rel="stylesheet" href="{{asset "css/productoversee.css"}}&{{date format="SS"}}">
@@ -18,11 +18,12 @@
 <body class="{{body_class}} {{#if @custom.social_icons}} with-social-link{{/if}} po-ghost-template is-head-b--a_n{{#match @custom.title_font "=" "serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "serif"}} has-serif-body{{/match}}" data-member="{{#if @member.paid}}po-paid-member{{/if}}{{^if @member.paid}}{{^if @member}}po-not-member{{else}}po-free-member{{/if}}{{/if}}">
 
 
-
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KRH8LC5"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+
   
   <div class="gh-site">
     
@@ -47,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="gh-subscribe-input-text">
               {{> icons/email}}
             </div>
-            <div class="gh-subscribe-input-btn">Inscreva-se</div>
+            <div class="gh-subscribe-input-btn">Inscreva-se grátis</div>
           </a>
           {{else}}
           <h3 class="gh-subscribe-title">Quer acesso ilimitado?</h3>
@@ -60,5 +61,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </div>
     {{/if}}
-
+</div>
     {{> "productoversee_partials/po_footer" }}
