--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -217,7 +217,26 @@ body.po-sidebar-banner-4 .po-sidebar-banner ul li:nth-child(4) {display: block;}
 .po-banner-second,
 .po-show-banner-second .po-banner-first {display: none;}
 .po-show-banner-second .po-banner-second {display: block;}
-
-
 */
 
+
+.po-call-bemember {
+	border: 1px solid rgba(0,0,0,.07);
+	background: var(--colorGrayLight);
+	border-radius: 3px;
+	padding: 20px;
+	color: #000;
+	text-align: left;
+}
+
+.po-call-bemember h3 {margin-top: 0px;}
+
+
+.po-call-bemember .gh-subscribe-input {
+	margin: 30px 0 10px;
+	text-decoration: none;
+	justify-content: initial;
+	color: #000;
+}
+
+.po-call-bemember .gh-subscribe-input:hover {background: black; color: #fff;}
