--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -240,3 +240,6 @@ body.po-sidebar-banner-4 .po-sidebar-banner ul li:nth-child(4) {display: block;}
 }
 
 .po-call-bemember .gh-subscribe-input:hover {background: black; color: #fff;}
+
+
+.po-content .kg-button-card {margin:  20px 0 !important;}
