Testing new CTAs

--- a/post.hbs
+++ b/post.hbs
@@ -80,11 +80,11 @@
             <div class="gh-subscribe-input-btn">Inscreva-se agora</div>
           </a>
           {{else}}
-          <h3>Já é membro da newsletter? Tenha acesso ilimitado agora!</h3>
+          <h3>Você sabia que temos conteúdos exclusivos para assinantes do portal?</h3>
 
-          <p>Ajude a manter o projeto! Faça um upgrade da sua conta. Membros pagantes participam de palestras exclusivas, sessões de QA& e Mentorias em Grupo, além de descontos em cursos.</p>
+          <p>Além de ter acesso ilimitado a todos os conteúdos, você também pode participar de palestras exclusivas, sessões de Q&A, mentorias em grupo e acesso à descontos em cursos. E claro, assinando você nos ajuda a manter o projeto e aumentar a nossa produção de conteúdo.</p>
 
-          <a class="gh-subscribe-btn gh-btn gh-primary-btn" data-event="clk-signup-artigo" href="#/portal/account/plans" data-portal="account/plans">Torne-se membro agora!</a>
+          <a class="gh-subscribe-btn gh-btn gh-primary-btn" data-event="clk-signup-artigo" href="#/portal/account/plans" data-portal="account/plans">Você pode assinar clicando aqui</a>
           {{/if}}
         </div>  
 
