fixing font title

--- a/assets/css/productoversee.css
+++ b/assets/css/productoversee.css
@@ -1,9 +1,7 @@
+@import url("screen.css");
 @import url("default.css");
-@import url("typo.css");
 @import url("footer.css");
 @import url("header.css");
 @import url("home.css");
 @import url("single.css");
 @import url("mobile.css");
-
-
