--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,3 +1,4 @@
+
 /**** VARIABLES ****/
 :root {
   --breakpoint: 900px;
@@ -6,12 +7,16 @@
   --colorBlackStrong: #000000;
   --colorGrayLight: #E5E5E5;
   --colorGrayMedium: #4F4F4F;
+  --fontSansSerif: "Open Sans", "Roboto Flex", Helvetica, Arial, sans-serif;
   --fontDefault: "Azeret Mono", "The Future Mono 02", monospace;
   --fontSerif: "Noto Serif Display", "Times New Roman", Times, serif;
   --fontMono: "Azeret Mono", "The Future Mono 02", monospace;
-  --fontSansSerif: "Roboto Flex", "Open Sans", Helvetica, Arial, sans-serif;
   --font-sans: "Roboto Flex", "Open Sans", Helvetica, Arial, sans-serif;
   --fontArticle: "Open Sans", arial, helvetica, sans-serif;
+}
+
+h2.gh-card-title {
+	font: 700 2.3rem var(--fontDefault);
 }
 
 * {
