--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -40,7 +40,7 @@
 }
 
 .po-home-highlight .po-featured-home h1 {
-	font: 600 3rem/1.2 var(--fontMono);
+	font: 600 3rem/1.2 var(--fontDefault);
 	padding: 20px 0;
 }
 
