--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -1,3 +1,5 @@
+
+
 .post-template .gh-main {padding-top: 6rem !important;}
 
 .po-content .kg-callout-card {font-size: 1.5rem; }
@@ -26,9 +28,10 @@
 }
 
 .po-article-title {
-	font: 500 4.5rem/1.4 var(--fontMono);
-	max-width: 930px;
-	padding: 10px 0 30px;
+	font: 700 5rem var(--fontDefault) !important;
+	/* font: 500 4.5rem/1.4 Arial, "Open Sans" !important; */
+	max-width: 850px;
+	padding: 0 0 30px;
 	text-transform: uppercase;
 }
 
@@ -39,8 +42,8 @@
 }
 
 .po-article-excerpt {
-	font:300 2.7rem/1.3 var(--fontSansSerif);
-	padding-bottom: 30px;
+	font: 300 2.7rem/1.3 var(--fontSansSerif);
+	padding-bottom: 60px;
 	/*padding: 30px 0;*/
 	max-width: 800px;
 	color: var(--colorGrayMedium);
