--- a/default.hbs
+++ b/default.hbs
@@ -7,9 +7,8 @@
   <title>{{meta_title}} - {{meta_description}}</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@100;400;700&Open+Sans:wght@300;400;700&family=Azeret+Mono:wght@100;300;400;600,700,900&family=Noto+Serif+Display:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@100;400;700&family=Open+Sans:opsz,wght@300;400;700&family=Azeret+Mono:opsz,wght@100;300;400;600,700,900&family=Noto+Serif+Display:opsz,wght@300;400;600;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{{asset "css/screen.css"}}">
   <link rel="stylesheet" href="{{asset "css/productoversee.css"}}&{{date format="SS"}}">
 
   {{ghost_head}}
@@ -23,8 +22,6 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-
-  
   <div class="gh-site">
     
     {{> "productoversee_partials/po_header" }}
